tests/fixtures/invalid/round_bool_str.py
# Cannot call round() with Bool, Str
x = round(True, "hello")
